java 8 fixes - upgraded findbugs - removed jvm options
git-svn-id: https://svn.code.sf.net/p/iwant/code/trunk@804 b1b70e83-b727-4846-b4cf-edd8a5b4313f